ver.0.20: 商品一覧表示機能

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,7 +10,7 @@
 	<ol>
 		<li><a id="servlet" href="hello">サーブレット起動テスト</a></li>
 		<li><a id="app" href="hello?action=app">ハローアプリケーション</a></li>
-		<li><a id="sample" href="hello?action=sample">JSPサンプル</a></li>
+		<li><a id="sample" href="sample?action=list">JSPサンプル</a></li>
 	</ol>
 </body>
 </html>
